--- a/client_style.css
+++ b/client_style.css
@@ -7,6 +7,7 @@ body {
 	background-color: #f0f1f3;
 	color:#667073;
 	font: 16px/1.3 'Arial',sans-serif;
+	
 }
 
 
@@ -40,6 +41,20 @@ body {
 
 }
 
+.logo{
+	text-align: center;
+}
+.usernameInput {
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid #eef224;
+  outline: none;
+  padding-bottom: 5px;
+  text-align: center;
+  width: 400px;
+  font-size: 200%;
+  letter-spacing: 3px;
+}
 
 .chatscreen{
 	display:none;
