--- a/client_style.css
+++ b/client_style.css
@@ -91,6 +91,7 @@ body {
   border: none;
   border-bottom: 2px solid #eef224;
   outline: none;
+  padding-top: 10px;
   padding-bottom: 2px;
   text-align: center;
   width: 400px;
@@ -104,6 +105,7 @@ body {
   border-bottom: 2px solid #eef224;
   outline: none;
   padding-bottom: 2px;
+  padding-top: 10px;
   text-align: center;
   width: 50px;
   font-size: 100%;
