--- a/client_style.css
+++ b/client_style.css
@@ -1,120 +1,154 @@
-* {
-	padding: 0;
-	margin: 0;
+@import 'https://fonts.googleapis.com/css?family=Alegreya+Sans';
+@import url('https://fonts.googleapis.com/css?family=VT323');
+
+*:focus{
+	outline: none;
 }
 
 body {
-	background-color: #f0f1f3;
-	color:#667073;
-	font: 16px/1.3 'Arial',sans-serif;
+	background-color: #CBE32D;
+  margin: 0;
+}
 
+img{
+	width: 200px;
+	height: auto;
+}
+
+img:hover{
+	width: 250px;
+	height: auto;
+}
+
+ul{
+	list-style-type: none;
+}
+
+input{
+	width: 300px;
+	height: 40px;
+	border: 3px solid #4CAF50;
+    border-radius: 10px;
 }
 
 
-#chatform {
-
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: -50px;
-    margin-left: -50px;
-    width: 100px;
-    height: 100px;
-
+label{
+	font-size: 160%;
+	font-family: 'VT323', monospace;
 }
 
-.text{
-	text-align: center;
-	font-weight: 700;
-	font-size: 2.5rem;
-	text-transform: uppercase;
+.home{
+  position: absolute;;
+  margin: auto;
+  top: 0;
+  right: 89%;
+  bottom: 85%;
+  left: 0;
+  width: 100px;
+  height: 100px;
+}
+
+.home i{
+  font-size:175%;
 	color: white;
-	margin: 0;
-	a {
-		text-decoration: none;
-		color: white;
-		transition: all .4s ease-in-out;
-		&:hover {
-			opacity: 0.4;
-		}
-	}
-
 }
 
-.myButton {
-	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
-	box-shadow:inset 0px 1px 0px 0px #ffffff;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f9f9f9), color-stop(1, #e9e9e9));
-	background:-moz-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
-	background:-webkit-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
-	background:-o-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
-	background:-ms-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
-	background:linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#e9e9e9',GradientType=0);
-	background-color:#f9f9f9;
-	-moz-border-radius:6px;
-	-webkit-border-radius:6px;
-	border-radius:6px;
-	border:1px solid #dcdcdc;
-	display:inline-block;
-	cursor:pointer;
-	color:#666666;
-	font-family:Trebuchet MS;
-	font-size:15px;
-	font-weight:bold;
-	padding:6px 24px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #ffffff;
+.home i:hover{
+  color: #4CAF50;
 }
-.myButton:hover {
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #e9e9e9), color-stop(1, #f9f9f9));
-	background:-moz-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
-	background:-webkit-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
-	background:-o-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
-	background:-ms-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
-	background:linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#e9e9e9', endColorstr='#f9f9f9',GradientType=0);
-	background-color:#e9e9e9;
-}
-.myButton:active {
-	position:relative;
-	top:1px;
-}
+
 
 
 .logo{
-	text-align: center;
-}
-.usernameInput {
-  background-color: transparent;
-  border: none;
-  border-bottom: 2px solid #eef224;
-  outline: none;
-  padding-top: 10px;
-  padding-bottom: 2px;
-  text-align: center;
-  width: 400px;
-  font-size: 150%;
-  letter-spacing: 2px;
+	position: absolute;;
+  margin: auto;
+  top: 80%;
+  bottom: 0;
+  right: 0;
+  left: 75%;
+  width: 14%;
+  height: 12%;
 }
 
-.ageInput {
-  background-color: transparent;
-  border: none;
-  border-bottom: 2px solid #eef224;
-  outline: none;
-  padding-bottom: 2px;
-  padding-top: 10px;
-  text-align: center;
-  width: 50px;
-  font-size: 100%;
-  letter-spacing: 3px;
+.logo:hover{
+	position: absolute;
+	margin: auto;
+  top: 78%;
+  bottom: 0;
+  right: 0;
+  left: 73%;
+
+
 }
 
-.chatscreen{
-	display:none;
-	width:700px;
-	margin: 0 auto 200px;
-	overflow:hidden;
+.username{
+	position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 66%;
+  right: 0;
+  left: 0;
+  width: 300px;
+  height: 50px;
+
+}
+
+.age{
+	position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 41%;
+  right: 0;
+  left: 0;
+  width: 300px;
+  height: 50px;
+
+}
+
+.gender{
+	position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 16%;
+  right: 0;
+  left: 0;
+  width: 300px;
+  height: 50px;
+
+}
+
+.myButton{
+	cursor: pointer;
+	background-color: white;
+	font-size: 120%;
+	font-family: 'VT323', monospace;
+	width: 100%;
+	height: 100%;
+	border: 3px solid #4CAF50;
+	border-radius: 10px;
+	-webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+
+.myButton:hover{
+  background-color: #4CAF50;
+  color: white;
+  border: 4px solid white;
+}
+
+.myButton:active{
+  background-color: #4CAF50;
+  color: white;
+  border: 4px solid #4CAF50;
+}
+
+.login{
+	position: absolute;
+  margin: auto;
+  top: 15%;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  width: 165px;
+  height: 45px;
 }
