--- a/contact_style.css
+++ b/contact_style.css
@@ -2,6 +2,10 @@
 @import url('https://fonts.googleapis.com/css?family=VT323');
 @import url('https://fonts.googleapis.com/css?family=Bungee+Inline');
 
+*:focus{
+	outline: none;
+}
+
 /*over all styling of the html file*/
 html {
   height: 100%;
