--- a/client_style.css
+++ b/client_style.css
@@ -25,10 +25,13 @@ ul{
 }
 
 input{
+	font-size: 150%;
+	font-family: 'VT323', monospace;
+	padding-left: 2%;
 	width: 300px;
 	height: 40px;
 	border: 3px solid #4CAF50;
-    border-radius: 10px;
+  border-radius: 10px;
 }
 
 
@@ -85,7 +88,7 @@ label{
 	position: absolute;
   margin: auto;
   top: 0;
-  bottom: 66%;
+  bottom: 61%;
   right: 0;
   left: 0;
   width: 300px;
@@ -97,7 +100,7 @@ label{
 	position: absolute;
   margin: auto;
   top: 0;
-  bottom: 41%;
+  bottom: 36%;
   right: 0;
   left: 0;
   width: 300px;
@@ -109,7 +112,7 @@ label{
 	position: absolute;
   margin: auto;
   top: 0;
-  bottom: 16%;
+  bottom: 11%;
   right: 0;
   left: 0;
   width: 300px;
@@ -145,10 +148,113 @@ label{
 .login{
 	position: absolute;
   margin: auto;
-  top: 15%;
+  top: 20%;
   bottom: 0;
   right: 0;
   left: 0;
   width: 165px;
   height: 45px;
+}
+
+/*next page after logging in*/
+
+#message-container{
+	border: 5px solid #4CAF50;
+	border-radius: 10px;
+	background-color: white;
+	position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 23%;
+  right: 0;
+  left: 0;
+  width: 550px;
+  height: 400px;
+	overflow-y: scroll;
+	font-family: 'VT323', monospace;
+	font-size: 130%;
+	padding-top: 0.2%;
+	padding-left: 0.5%;
+}
+
+#message{
+	border: 5px solid #4CAF50;
+	border-radius: 10px;
+	background-color: white;
+	position: absolute;
+  margin: auto;
+  top: 53%;
+  bottom: 0;
+  right: 12.5%;
+  left: 0;
+  width: 350px;
+  height: 100px;
+}
+
+#send{
+	position: absolute;
+  margin: auto;
+  top: 45%;
+  bottom: 0;
+  right: 0;
+  left: 28%;
+  width: 165px;
+  height: 45px;
+}
+
+#disconnect{
+	position: absolute;
+	margin: auto;
+	top: 61.5%;
+	bottom: 0;
+	right: 0;
+	left: 28%;
+	width: 165px;
+	height: 45px;
+}
+
+#buttonSend{
+	cursor: pointer;
+	font-size: 120%;
+	font-family: 'VT323', monospace;
+	border: 5px solid #4CAF50;
+	border-radius: 10px;
+	background-color: #4CAF50;
+	color: white;
+	width: 100%;
+	height: 100%;
+	-webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+
+#buttonSend:hover{
+	border: 5px solid white;
+	border-radius: 10px;
+	background-color: white;
+	color: #4CAF50;
+	width: 100%;
+	height: 100%;
+}
+
+#buttonDisconnect{
+	cursor: pointer;
+	font-size: 120%;
+	font-family: 'VT323', monospace;
+	border: 5px solid #4CAF50;
+	border-radius: 10px;
+	background-color: #4CAF50;
+	color: white;
+	width: 100%;
+	height: 100%;
+	-webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+
+#buttonDisconnect:hover{
+		border: 5px solid white;
+		border-radius: 10px;
+		background-color: white;
+		color: #4CAF50;
+		width: 100%;
+		height: 100%;
 }
