--- a/about_style.css
+++ b/about_style.css
@@ -60,30 +60,17 @@ ul{
   color: #4CAF50;
 }
 
-#matthew{
+section{
   margin: auto;
   background-color: #A8CD1B;
-  min-height: 95vh;
+  min-height: 110vh;
   width: 90%;
   margin-top: 100px;
 }
 
-.mh{
-  position: absolute;;
-  margin: auto;
-  font-size: 250%;
-  top: 155%;
-  right: 0;
-  bottom: 0;
-  left: 6%;
-  width: 400px;
-  height: 300px;
-  color: white;
-  font-family: 'VT323', monospace;
-}
-
-.mp{
-  background-color: #CBE32D;
+.p{
+	font-family: 'VT323', monospace;
+  background-color: #A8CD1B;
   position: absolute;;
   margin: auto;
   font-size: 250%;
@@ -91,80 +78,8 @@ ul{
   right: 0;
   bottom: 0;
   left: 0;
-  width: 80%;
-  height: 70%;
-
-}
-
-#peter{
-  margin: auto;
-  background-color: #A8CD1B;
-  min-height: 95vh;
-  width: 90%;
-  margin-top: 100px;
-}
-
-.ph{
-  position: absolute;;
-  margin: auto;
-  font-size: 250%;
-  top: 372%;
-  right: 0;
-  bottom: 0;
-  left: 12%;
-  width: 400px;
-  height: 300px;
-  color: white;
-  font-family: 'VT323', monospace;
-}
-
-.pp{
-  background-color: #CBE32D;
-  position: absolute;;
-  margin: auto;
-  font-size: 250%;
-  top: 438%;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 80%;
-  height: 70%;
-
-}
-
-#alvin{
-  margin: auto;
-  background-color: #A8CD1B;
-  min-height: 95vh;
-  width: 90%;
-  margin-top: 100px;
-  margin-bottom: 70px;
-}
-
-.ah{
-  position: absolute;;
-  margin: auto;
-  font-size: 250%;
-  top: 590%;
-  right: 0;
-  bottom: 0;
-  left: 9%;
-  width: 400px;
-  height: 300px;
-  color: white;
-  font-family: 'VT323', monospace;
-}
-
-.ap{
-  background-color: #CBE32D;
-  position: absolute;;
-  margin: auto;
-  font-size: 250%;
-  top: 657%;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 80%;
-  height: 70%;
+  width: 95%;
+  min-height: 110vh;
+padding-left: 5%;
 
 }
